--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node node_modules/gulp/bin/gulp.js dev",
-    "build": "node node_modules/gulp/bin/gulp.js build"
+    "dev": "gulp dev",
+    "build": "cross-env NODE_ENV=production gulp build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sonky740/Guide_es6.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "손기연",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/sonky740/Guide_es6/issues"
@@ -30,7 +30,6 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^8.0.0",
     "gulp-bro": "^2.0.0",
-    "gulp-cli": "^2.3.0",
     "gulp-copy": "^4.0.1",
     "gulp-file-include": "^2.3.0",
     "gulp-html-beautify": "^1.0.1",
@@ -42,6 +41,7 @@
     "merge-stream": "^2.0.0",
     "prettier": "^2.5.1",
     "sass": "^1.47.0",
+    "terser-webpack-plugin": "^5.3.0",
     "webpack-stream": "^7.0.0"
   },
   "browserslist": [
