--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "gulp dev",
-    "build": "cross-env NODE_ENV=production gulp build"
+    "build": "cross-env NODE_ENV=production gulp build",
+    "live-server": "live-server --open=/dist/"
   },
   "repository": {
     "type": "git",
@@ -38,6 +39,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-watch": "^5.0.1",
+    "live-server": "^1.2.1",
     "merge-stream": "^2.0.0",
     "prettier": "^2.5.1",
     "sass": "^1.47.0",
