--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@babel/core": "^7.16.7",
     "@babel/plugin-transform-runtime": "^7.16.7",
     "@babel/preset-env": "^7.16.7",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "babel-loader": "^8.2.3",
     "browser-sync": "^2.27.7",
     "eslint": "^8.6.0",
@@ -44,6 +46,8 @@
     "prettier": "^2.5.1",
     "sass": "^1.47.0",
     "terser-webpack-plugin": "^5.3.0",
+    "ts-loader": "^9.2.7",
+    "typescript": "^4.6.2",
     "webpack-stream": "^7.0.0"
   },
   "browserslist": [
