--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,8 @@
           "browsers": ["last 2 version", "ie >= 11"]
         }
       }
-    ]
+    ],
+    "@babel/preset-typescript"
   ],
   "plugins": ["@babel/plugin-transform-runtime"]
 }
