--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "gulp dev",
     "build": "cross-env NODE_ENV=production gulp build",
-    "live-server": "live-server --open=/dist/"
+    "live-server": "live-server --open=/dist/",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,7 @@
     "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-watch": "^5.0.1",
+    "husky": "^7.0.4",
     "live-server": "^1.2.1",
     "merge-stream": "^2.0.0",
     "prettier": "^2.5.1",
@@ -55,5 +57,8 @@
   ],
   "dependencies": {
     "core-js": "^3.20.2"
+  },
+  "lint-staged": {
+    "*.ts": "tsc"
   }
 }
