--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "gulp dev",
     "build": "cross-env NODE_ENV=production gulp build",
     "live-server": "live-server --open=/dist/",
+    "tsc": "tsc --noEmit -p ./tsconfig.json",
     "prepare": "husky install"
   },
   "repository": {
@@ -59,6 +60,6 @@
     "core-js": "^3.20.2"
   },
   "lint-staged": {
-    "*.ts": "tsc"
+    "*.ts": "npm run tsc"
   }
 }
